#Added User account management functionality such as profile and address

--- a/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
+++ b/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
@@ -40,7 +40,7 @@
         <h5 class="mt-4">Order Items</h5>
         <hr />
         <div class="table-responsive">
-            <table class="table">
+            <table class="table table-sm">
                 <thead>
                     <tr>
                         <th>Product</th>
