--- a/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
+++ b/Task1LoginRegister/Views/Shared/_UserLayout.cshtml
@@ -67,7 +67,7 @@
                                        @UserService.GetUserName()
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" asp-action="Profile">My Profile</a></li>
+                                        <li><a class="dropdown-item" asp-controller="Account" asp-action="MyProfile">My Profile</a></li>
                                         <li><a class="dropdown-item" asp-action="UserOrders" asp-controller="Account">Orders</a></li>
                                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                                         <li><hr class="dropdown-divider"></li>
