--- a/Task1LoginRegister/Views/Account/Login.cshtml
+++ b/Task1LoginRegister/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
     <div class="row justify-content-center align-items-center" style="min-height: 80vh;">
         <div class="col-lg-5 col-md-7 col-sm-10">
             <div class="card shadow-lg border-0 rounded-lg" style="max-width: 100%;">
-                <div class="card-header text-white text-center py-4" style="background: linear-gradient(90deg, #007bff, #00c6ff);">
+                <div class="card-header text-white text-center py-4" style="background:linear-gradient(90deg, #007bff, #00088b);">
                     <h3 class="card-title mb-0">Login</h3>
                 </div>
                 <div class="card-body p-4">
@@ -33,7 +33,9 @@
                         </div>
 
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary fw-bold py-2">Login</button>
+                            <button type="submit" class="btn text-white fw-bold py-2" style="background: linear-gradient(90deg, #007bff, #00088b);border: none;font-size: 1.2rem;">
+                                Login
+                            </button>
                         </div>
                     </form>
                 </div>
