--- a/Task1LoginRegister/Views/Account/SignUp.cshtml
+++ b/Task1LoginRegister/Views/Account/SignUp.cshtml
@@ -10,7 +10,7 @@
     <div class="row justify-content-center">
         <div class="col-lg-9 col-md-8 col-sm-10 col-12" >
             <div class="card shadow-lg border-0 rounded-lg" style="max-width:700px">
-                <div class="card-header text-center text-white py-4" style="background: linear-gradient(90deg, #007bff, #00c6ff);">
+                <div class="card-header text-center text-white py-4" style="background: linear-gradient(90deg, #007bff, #00088b);">
                     <h3 class="card-title mb-0">SignUp</h3>
                 </div>
                 <div class="card-body py-4">
@@ -69,7 +69,7 @@
                         </div>
 
                         <div class="d-grid">
-                            <input type="submit" value="Sign Up" class="btn btn-primary fw-bold py-2" />
+                            <input type="submit" value="Sign Up" class="btn text-white fw-bold py-2" style="background: linear-gradient(90deg, #007bff, #00088b);border: none;font-size: 1.2rem;" />
                         </div>
                     </form>
                 </div>
