--- a/Task1LoginRegister/Views/Order/Invoice.cshtml
+++ b/Task1LoginRegister/Views/Order/Invoice.cshtml
@@ -20,12 +20,15 @@
     .btn, .no-print {
         display: none !important;
     }
+        @@page {
+            size: A4;
+            margin: 0;
+        }
 
-    @@page {
-        size: A4; 
-        margin: 0; 
-      
-    }
+        body, html {
+            margin: 0 !important;
+            padding: 0 !important;
+        }
 }
 
 </style>
