#Corrected cart problem and some minor change on other file

--- a/Task1LoginRegister/Views/Home/Products.cshtml
+++ b/Task1LoginRegister/Views/Home/Products.cshtml
@@ -142,11 +142,17 @@
             padding-right: 10px;
         }
 
+        .col-md-3{
+            padding-right:0;
+            padding-left:0;
+        }
         .product-image {
             height: 350px;
             object-fit: cover;
         }
-
+        body{
+            font-size:16px;
+        }
         .card {
             height: auto;
         }
@@ -154,6 +160,7 @@
         .pagination {
             font-size: 0.9rem;
         }
+
     }
 
     /* Media Queries for iPad Mini/Pro */
