--- a/Task1LoginRegister/Views/Order/OrderConfirmation.cshtml
+++ b/Task1LoginRegister/Views/Order/OrderConfirmation.cshtml
@@ -29,7 +29,7 @@
 
                     <div class="mt-4">
                         <a href="/" class="btn btn-outline-primary me-2">Continue Shopping</a>
-                        <a asp-action="UserOrders" asp-controller="Order" class="btn btn-primary">View My Orders</a>
+                        <a asp-action="UserOrders" asp-controller="Account" class="btn btn-primary">View My Orders</a>
                     </div>
                 </div>
             </div>
