#Remove repeated image display code and style profile images

--- a/Task1LoginRegister/Areas/Admin/Views/AdminOrders/CustomerOrders.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/AdminOrders/CustomerOrders.cshtml
@@ -6,6 +6,9 @@
     var customer = ViewBag.Customer as Task1LoginRegister.Models.Userlogin;
 }
 <style>
+    .img-thumbnail {
+        border: 3px solid #007bff;
+    }
     @@media (max-width:767px){
         .container-fluid{
             padding-left:0;
