--- a/Task1LoginRegister/Areas/Admin/Views/Home/Index.cshtml
+++ b/Task1LoginRegister/Areas/Admin/Views/Home/Index.cshtml
@@ -46,6 +46,7 @@
                         <td>
                             <div class="d-flex flex-column flex-sm-row gap-2">
                                 <a class="btn btn-warning btn-sm w-100" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                                <a class="btn btn-info btn-sm w-100" asp-action="Details" asp-route-id="@item.Id">View</a>
                                 <a class="btn btn-danger btn-sm w-100" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                             </div>
                         </td>
