--- a/Task1LoginRegister/Views/Order/Checkout.cshtml
+++ b/Task1LoginRegister/Views/Order/Checkout.cshtml
@@ -215,29 +215,7 @@
                         {
                             <div class="d-flex mb-3 border-bottom pb-3">
                                 <div style="width: 60px; height: 60px;">
-
-                                    @{
-                                        var primaryMedia = item.Product.ProductImages.FirstOrDefault(pi => pi.IsPrimaryImage);
-
-                                        if (primaryMedia != null)
-                                        {
-                                            var fileExtension = System.IO.Path.GetExtension(primaryMedia.ImageUrl)?.ToLower();
-
-                                            if (fileExtension == ".jpg" || fileExtension == ".jpeg" || fileExtension == ".png" || fileExtension == ".gif" || fileExtension == ".webp")
-                                            {
-                                                <!-- Display image -->
-                                                <img src="@primaryMedia.ImageUrl" class="card-img-top me-2 product-image rounded-3" alt="Primary Product Image">
-                                            }
-                                            else if (fileExtension == ".mp4" || fileExtension == ".webm" || fileExtension == ".ogg")
-                                            {
-                                                <!-- Display video -->
-                                                <video class="card-img-top me-2 product-image rounded-3" controls autoplay loop>
-                                                    <source src="@primaryMedia.ImageUrl" type="video/@fileExtension.TrimStart('.')">
-                                                    Your browser does not support the video tag.
-                                                </video>
-                                            }
-                                        }
-                                    }
+                                    <partial name="_ProductImageVideoPartialView" model="@item.Product" />
 
                                 </div>
                                 <div class="ms-3 flex-grow-1">
