--- a/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
+++ b/Task1LoginRegister/Views/Shared/_OrderItemsTable.cshtml
@@ -53,6 +53,12 @@
                         <th class="text-end">Total (₹)</th>
                     </tr>
                 </thead>
+
+                @{
+                    var highestDeliveryCharge = Model.OrderItems.Max(x => x.Product.DeliveryCharge);
+                    bool hasDisplayedHighestDelivery = false;
+                }
+
                 <tbody>
                     @foreach (var item in Model.OrderItems)
                     {
@@ -60,20 +66,29 @@
                         var sgst = ((item.Product?.Subcategory?.Taxes?.SGST ?? 0m) * (item.Product?.CalculatedSellingPrice ?? 0m)) / 100;
 
                         var discount = item.Product.Price - item.Product.CalculatedSellingPrice;
-                        var itemTotal = (item.Product.CalculatedSellingPrice * item.Quantity) + (cgst * item.Quantity) + (sgst * item.Quantity) + item.Product.DeliveryCharge;
+                        var itemTotal = (item.Product.CalculatedSellingPrice * item.Quantity) + (cgst * item.Quantity) + (sgst * item.Quantity);
 
+                        var deliveryCharge = 0m;
+                        if(!hasDisplayedHighestDelivery && item.Product.DeliveryCharge == highestDeliveryCharge){
+                            deliveryCharge = highestDeliveryCharge;
+                            hasDisplayedHighestDelivery = true;
+                        }
+                        itemTotal += deliveryCharge;
                         <tr>
                             <td>
-                                <div class="d-flex align-items-center">
-                                    @item.Product.Name
+                                <div class="align-items-center">
+                                    @item.Product.Name<br />
+
+                                    <span class="small" style="font-size:10px;"><strong>CGST:</strong> @(item.Product?.Subcategory?.Taxes?.CGST ?? 0m) %</span>  <br />
+                                    <span class="small" style="font-size:10px;"><strong>SGST:</strong> @(item.Product?.Subcategory?.Taxes?.SGST ?? 0m) %</span>
                                 </div>
                             </td>
-                            <td>@item.Price.ToString("N2")</td>
+                            <td>@item.Product.Price.ToString("N2")</td>
                             <td class="text-center">@item.Quantity</td>
                             <td class="text-success">-@discount</td>
-                            <td>@cgst.ToString("N2")</td>
-                            <td>@sgst.ToString("N2")</td>
-                            <td>@(item.Product.DeliveryCharge > 0 ? item.Product.DeliveryCharge.ToString("N2") : "0.00")</td>
+                            <td>@((cgst * item.Quantity).ToString("N2"))</td>
+                            <td>@((sgst * item.Quantity).ToString("N2"))</td>
+                            <td>@deliveryCharge.ToString("N2")</td>
                             <td class="text-end">@itemTotal.ToString("N2")</td>
                         </tr>
                     }
